// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render toJSON renders View props 1`] = `
<RCTView
  pointerEvents="box-none"
>
  <RCTText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    isHighlighted={false}
    selectionColor={null}
  >
    Hello
  </RCTText>
  <RCTView
    style={
      {
        "flex": 1,
      }
    }
  />
</RCTView>
`;

exports[`render toJSON returns expected JSON output based on renderer component 1`] = `
<RCTView>
  <RCTText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    isHighlighted={false}
    selectionColor={null}
  >
    Hello
  </RCTText>
  <RCTView />
</RCTView>
`;
